component-logo done

--- a/themes/zephyr/front-end/src/components/component-case-studies/index.html
+++ b/themes/zephyr/front-end/src/components/component-case-studies/index.html
@@ -7,16 +7,14 @@
     <div class="container">
       <div class="paragraph-1 word-up desktop-only">CASE STUDIES</div>
       <h1 class="headline-1 real-line-up">We collaborate with exciting new companies…</h1>
-      <div class="row">
-        <div class="col-12 bike-image">
-          <div class="image-wrapper" data-reveal-direction="left">
-            <img  src="../../html/images/home-image%20.png"  alt="image">
-          </div>
-          <div class="content">
-            <h5 class="headline-5 word-up">Fully Charged</h5>
-            <h4 class="headline-4 real-line-up">Kickstarting the eBike revolution.</h4>
-          </div>
-        </div>
+     <div class="image-content">
+       <div class="image-bg">
+         <img class="mac"  src="../../html/images/macbook.png"  alt="image">
+       </div>
+     </div>
+      <div class="content">
+        <h5 class="headline-5">Fully Charged</h5>
+        <h4 class="headline-4">Kickstarting the eBike revolution.</h4>
       </div>
     </div>
   </section>
