--- a/themes/zephyr/front-end/src/styles/style.scss
+++ b/themes/zephyr/front-end/src/styles/style.scss
@@ -1,6 +1,6 @@
 @import "variables";
 @import "~bootstrap/scss/bootstrap-grid";
-//@import "fonts";
+@import "fonts";
 @import "mixins";
 @import "general-classes";
 @import "layouts/quform_form";
